# hermesmq-node

./: .gitignore  Cargo.toml  README.md  compose-smoke.mjs  consume-check.mjs  daemon.mjs  index.d.ts  index.js  package-lock.json  package.json  pipeline-smoke.mjs  smoke.mjs  subscribe-smoke.mjs
.github/workflows/: ci.yml  release.yml
src/: lib.rs
