[package]
name = "hermesmq-node"
version = "0.1.4"
edition = "2021"
publish = false
description = "Native Node.js client for hermesmq, a Raft-replicated message queue"
repository = "https://github.com/hyperiondb/hermesmq-node"
license = "GPL-3.0-or-later"
authors = ["Tadas Talaikis <info@nordlet.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "=3.9.0", default-features = false, features = ["napi6", "async"] }
napi-derive = "=3.5.6"
tokio = { version = "=1.52.3", features = ["rt-multi-thread", "time", "sync", "macros", "net", "io-util"] }
prost = "=0.13.5"
hermesmq-proto = "=0.2.0"

[build-dependencies]
napi-build = "=2.3.2"

[profile.release]
lto = true
strip = "symbols"
